--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
+    "axios": "^0.18.0",
     "css": "^2.2.4",
     "lib-flexible": "^0.3.2",
     "mint-ui": "^2.2.13",
