--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,11 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.4",
-    "mysql": "^2.16.0",
     "svg-captcha": "^1.3.11"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mysql": "^2.16.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
